[gd_scene load_steps=2 format=3 uid="uid://clvq3w4x8yhpk"]

[ext_resource type="Script" path="res://Scripts/GameStart/game_start.gd" id="1_game_start"]

[node name="GameStart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_start")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "開始遊戲"
horizontal_alignment = 1

[node name="SelectionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="TeamSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SelectionContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SelectionContainer/TeamSelection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "選擇隊伍:"
vertical_alignment = 1

[node name="TeamDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/SelectionContainer/TeamSelection"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "請選擇隊伍"

[node name="AddTeamButton" type="Button" parent="MarginContainer/VBoxContainer/SelectionContainer/TeamSelection"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+"

[node name="DeckSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SelectionContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SelectionContainer/DeckSelection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "選擇牌組:"
vertical_alignment = 1

[node name="DeckDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/SelectionContainer/DeckSelection"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "請選擇牌組"

[node name="AddDeckButton" type="Button" parent="MarginContainer/VBoxContainer/SelectionContainer/DeckSelection"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+"

[node name="StageSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SelectionContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SelectionContainer/StageSelection"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "選擇關卡:"
vertical_alignment = 1

[node name="StageDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/SelectionContainer/StageSelection"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "請選擇關卡"

[node name="AddStageButton" type="Button" parent="MarginContainer/VBoxContainer/SelectionContainer/StageSelection"]
custom_minimum_size = Vector2(60, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/SelectionContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 40

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "返回"

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "開始"

[node name="MessageDialog" type="AcceptDialog" parent="."]
title = "提示"
initial_position = 2
size = Vector2i(400, 150)
dialog_text = "請選擇隊伍、牌組和關卡!"

[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectionContainer/TeamSelection/AddTeamButton" to="." method="_on_add_team_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectionContainer/DeckSelection/AddDeckButton" to="." method="_on_add_deck_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SelectionContainer/StageSelection/AddStageButton" to="." method="_on_add_stage_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
